--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://lyova2277.github.io/reallyworld",
+  "homepage": ".",
   "name": "test",
   "version": "0.1.0",
   "private": true,
